Integriere StorageService, Model-Klassen, Buchkatalog, Controller und Interface