@@ -1,5 +1,9 @@
-import java.util.*;
+import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Buchkatalog für Suche, Details und Rezensionen.
+ */
 public class Buchkatalog {
     private final List<Buch> buecher;
     private final StorageService storageService;
@@ -9,173 +13,76 @@ public class Buchkatalog {
         this.buecher = storageService.ladeBuecher();
     }
 
-    /**
-     * Sucht nach Büchern mit dem angegebenen Titel
-     * @param titel Der zu suchende Titel (Teilstring)
-     * @return Liste der gefundenen Bücher
-     */
     public List<Buch> buchsuche(String titel) {
-        if (titel == null || titel.trim().isEmpty()) {
-            return new ArrayList<>(buecher); // Alle Bücher zurückgeben, wenn kein Titel angegeben
+        if (titel == null || titel.isBlank()) {
+            return List.copyOf(buecher);
         }
-        
-        List<Buch> ergebnisse = new ArrayList<>();
-        String suchTitel = titel.toLowerCase().trim();
-        
-        for (Buch buch : buecher) {
-            if (buch.getTitel().toLowerCase().contains(suchTitel)) {
-                ergebnisse.add(buch);
-            }
-        }
-        
-        return ergebnisse;
+        String such = titel.toLowerCase().trim();
+        return buecher.stream()
+            .filter(b -> b.getTitle().toLowerCase().contains(such))
+            .collect(Collectors.toList());
     }
-    
-    /**
-     * Sucht nach Büchern eines bestimmten Autors
-     * @param autorName Der Name des Autors (Teilstring)
-     * @return Liste der gefundenen Bücher
-     */
+
     public List<Buch> sucheNachAutor(String autorName) {
-        if (autorName == null || autorName.trim().isEmpty()) {
-            return new ArrayList<>(); // Leere Liste, wenn kein Autor angegeben
+        if (autorName == null || autorName.isBlank()) {
+            return List.of();
         }
-        
-        List<Buch> ergebnisse = new ArrayList<>();
-        String suchAutor = autorName.toLowerCase().trim();
-        
-        for (Buch buch : buecher) {
-            if (buch.getAutor() != null && buch.getAutor().getName().toLowerCase().contains(suchAutor)) {
-                ergebnisse.add(buch);
-            }
-        }
-        
-        return ergebnisse;
+        String such = autorName.toLowerCase().trim();
+        return buecher.stream()
+            .filter(b -> b.getAuthor() != null
+                      && b.getAuthor().toLowerCase().contains(such))
+            .collect(Collectors.toList());
     }
-    
-    /**
-     * Sucht nach Büchern eines bestimmten Genres
-     * @param genreName Der Name des Genres (Teilstring)
-     * @return Liste der gefundenen Bücher
-     */
+
     public List<Buch> sucheNachGenre(String genreName) {
-        if (genreName == null || genreName.trim().isEmpty()) {
-            return new ArrayList<>(); // Leere Liste, wenn kein Genre angegeben
+        if (genreName == null || genreName.isBlank()) {
+            return List.of();
         }
-        
-        List<Buch> ergebnisse = new ArrayList<>();
-        String suchGenre = genreName.toLowerCase().trim();
-        
-        for (Buch buch : buecher) {
-            if (buch.getGenres() != null) {
-                for (Genre genre : buch.getGenres()) {
-                    if (genre.getName().toLowerCase().contains(suchGenre)) {
-                        ergebnisse.add(buch);
-                        break; // Buch nur einmal hinzufügen, auch wenn mehrere Genres passen
+        String such = genreName.toLowerCase().trim();
+        return buecher.stream()
+            .filter(b -> {
+                for (String g : b.getGenres()) {
+                    if (g.toLowerCase().contains(such)) {
+                        return true;
                     }
                 }
-            }
-        }
-        
-        return ergebnisse;
+                return false;
+            })
+            .collect(Collectors.toList());
     }
-    
-    /**
-     * Sucht nach Büchern eines bestimmten Verlags
-     * @param verlagName Der Name des Verlags (Teilstring)
-     * @return Liste der gefundenen Bücher
-     */
+
     public List<Buch> sucheNachVerlag(String verlagName) {
-        if (verlagName == null || verlagName.trim().isEmpty()) {
-            return new ArrayList<>(); // Leere Liste, wenn kein Verlag angegeben
+        if (verlagName == null || verlagName.isBlank()) {
+            return List.of();
         }
-        
-        List<Buch> ergebnisse = new ArrayList<>();
-        String suchVerlag = verlagName.toLowerCase().trim();
-        
-        for (Buch buch : buecher) {
-            if (buch.getVerlag() != null && buch.getVerlag().getName().toLowerCase().contains(suchVerlag)) {
-                ergebnisse.add(buch);
-            }
-        }
-        
-        return ergebnisse;
+        String such = verlagName.toLowerCase().trim();
+        return buecher.stream()
+            .filter(b -> b.getPublisher() != null
+                      && b.getPublisher().toLowerCase().contains(such))
+            .collect(Collectors.toList());
     }
 
-    /**
-     * Gibt die Details eines Buches anhand seiner ID zurück
-     * @param id Die ID des Buches
-     * @return Das gefundene Buch oder null, wenn kein Buch mit dieser ID existiert
-     */
-    public Buch buchDetails(int id) {
-        if (id < 0 || id >= buecher.size()) {
-            return null; // Ungültige ID
-        }
-        
-        return buecher.get(id);
+    public Buch buchDetails(String bookId) {
+        if (bookId == null) return null;
+        return buecher.stream()
+            .filter(b -> bookId.equals(b.getBookId()))
+            .findFirst()
+            .orElse(null);
     }
 
-    /**
-     * Fügt eine Rezension zu einem Buch hinzu
-     * @param buchId Die ID des Buches
-     * @param rezension Die hinzuzufügende Rezension
-     * @return true, wenn die Rezension erfolgreich hinzugefügt wurde, sonst false
-     */
-    public boolean reviewHinzufuegen(int buchId, Rezension rezension) {
-        if (buchId < 0 || buchId >= buecher.size() || rezension == null) {
-            return false; // Ungültige ID oder Rezension
-        }
-        
-        Buch buch = buecher.get(buchId);
-        buch.getRezensionen().add(rezension);
-        
-        // Rezension im StorageService speichern
-        storageService.speichereRezension(rezension);
-        
-        return true;
-    }
-
-    /**
-     * Gibt alle Rezensionen eines Buches zurück
-     * @param buchId Die ID des Buches
-     * @return Liste der Rezensionen oder leere Liste, wenn keine Rezensionen vorhanden oder ID ungültig
-     */
-    public List<Rezension> showRezensionen(int buchId) {
-        if (buchId < 0 || buchId >= buecher.size()) {
-            return new ArrayList<>(); // Ungültige ID
-        }
-        
-        Buch buch = buecher.get(buchId);
-        return buch.getRezensionen();
-    }
-    
-    /**
-     * Fügt ein neues Buch zum Katalog hinzu
-     * @param buch Das hinzuzufügende Buch
-     * @return true, wenn das Buch erfolgreich hinzugefügt wurde, sonst false
-     */
-    public boolean buchHinzufuegen(Buch buch) {
-        if (buch == null) {
+    public boolean reviewHinzufuegen(String bookId, Rezension rezension) {
+        Buch buch = buchDetails(bookId);
+        if (buch == null || rezension == null) {
             return false;
         }
-        
-        buecher.add(buch);
+        rezension.setBookId(bookId);
+        storageService.speichereRezension(rezension);
         return true;
     }
-    
-    /**
-     * Gibt die Anzahl der Bücher im Katalog zurück
-     * @return Anzahl der Bücher
-     */
-    public int getBuecherAnzahl() {
-        return buecher.size();
-    }
-    
-    /**
-     * Gibt alle Bücher im Katalog zurück
-     * @return Liste aller Bücher
-     */
-    public List<Buch> getAlleBuecher() {
-        return new ArrayList<>(buecher);
+
+    public List<Rezension> showRezensionen(String bookId) {
+        return storageService.ladeRezensionen().stream()
+            .filter(r -> bookId.equals(r.getBookId()))
+            .collect(Collectors.toList());
     }
 }
